--- a/slave.html
+++ b/slave.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>多数決スレーブ画面</title>
+  <title>オンライン投票サービス(Slave)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="vote.js"></script>
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h2>投票参加画面</h2>
+  <h2>投票画面</h2>
   <div>投票ID: <span id="voteId"></span></div>
   <div id="choices"></div>
   <div id="results"></div>
