--- a/master.html
+++ b/master.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>多数決マスター画面</title>
+  <title>オンライン投票サービス(Master)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="vote.js"></script>
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h2>マスター画面</h2>
+  <h2>投票確認画面</h2>
   <div>投票ID: <span id="voteId"></span></div>
   <div>
     スレーブ用URL: <input type="text" id="slaveUrl" readonly style="width:300px">
