--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>多数決投票トップ</title>
+  <style>
+    body { font-family: sans-serif; }
+  </style>
 </head>
 <body>
   <h2>多数決投票システム</h2>
