--- a/slave.html
+++ b/slave.html
@@ -14,7 +14,7 @@
 <body>
   <h2>投票画面</h2>
   <div>投票ID: <span id="voteId"></span></div>
-  <div id="choices"></div>
+  <div id="choices" style="font-size: 3em;"></div>
   <div id="results"></div>
   <script>
     // ページロード時に初期化
