--- a/slave.html
+++ b/slave.html
@@ -8,13 +8,13 @@
   <script src="vote.js"></script>
   <style>
     body { font-family: sans-serif; }
-    .vote-btn { margin: 4px 0; }
+    .vote-btn { margin: 4px 0; font-size: 2em; }
   </style>
 </head>
 <body>
   <h2>投票画面</h2>
   <div>投票ID: <span id="voteId"></span></div>
-  <div id="choices" style="font-size: 3em;"></div>
+  <div id="choices"></div>
   <div id="results"></div>
   <script>
     // ページロード時に初期化
