--- a/master.html
+++ b/master.html
@@ -2,39 +2,33 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>オンライン投票サービス(Master)</title>
+  <title>多数決マスター画面</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="vote.js"></script>
+  <!-- QRコード生成ライブラリ -->
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
     body { font-family: sans-serif; }
     input[type="text"] { width: 200px; }
   </style>
 </head>
 <body>
-  <h2>投票確認画面</h2>
+  <h2>マスター画面</h2>
   <div>投票ID: <span id="voteId"></span></div>
   <div>
-    スレーブ用URL: <input type="text" id="slaveUrl" readonly style="width:350px">
-    <button type="button" onclick="copySlaveUrl()">参加リンクをコピー</button>
+    スレーブ用URL: 
+    <input type="text" id="slaveUrl" readonly style="width:300px">
+    <button type="button" onclick="copySlaveUrl()">コピー</button>
   </div>
-  <script>
-  // ...既存のコード...
-
-  function copySlaveUrl() {
-    const url = document.getElementById('slaveUrl').value;
-    navigator.clipboard.writeText(url).then(() => {
-      alert('スレーブ用URLをコピーしました');
-    }).catch(() => {
-      alert('コピーに失敗しました');
-    });
-  }
-  </script>
-  
+  <details>
+    <summary>スレーブ用URLのQRコードを表示</summary>
+    <div id="qrcode"></div>
+  </details>
   <form id="labelForm">
     <div id="labels"></div>
-    <button type="submit" style="font-size: 1.5em;">項目名を更新</button>
-    <button type="button" style="font-size: 1.5em;" onclick="resetVotes()">投票リセット</button>
+    <button type="submit">項目名を更新</button>
+    <button type="button" onclick="resetVotes()">投票リセット</button>
   </form>
   <div id="results"></div>
   <script>
@@ -42,8 +36,29 @@
     const url = new URL(location.href);
     const id = url.searchParams.get('id');
     document.getElementById('voteId').textContent = id;
-    document.getElementById('slaveUrl').value = `${location.origin}/voting/slave.html?id=${id}`;
+    document.getElementById('slaveUrl').value = `${location.origin}/slave.html?id=${id}`;
+    makeQrCode(); // スレーブURLセット後にQR生成
     initMaster(id);
+
+    function copySlaveUrl() {
+      const url = document.getElementById('slaveUrl').value;
+      navigator.clipboard.writeText(url).then(() => {
+        alert('スレーブ用URLをコピーしました');
+      }).catch(() => {
+        alert('コピーに失敗しました');
+      });
+    }
+
+    function makeQrCode() {
+      const url = document.getElementById('slaveUrl').value;
+      const qrDiv = document.getElementById('qrcode');
+      qrDiv.innerHTML = "";
+      new QRCode(qrDiv, {
+        text: url,
+        width: 180,
+        height: 180
+      });
+    }
   </script>
 </body>
 </html>
