--- a/master.html
+++ b/master.html
@@ -29,7 +29,7 @@
   <hr>
   <form id="labelForm">
     <div id="labels"></div>
-    <button type="submit" style="font-size: 1.2em;">項目名を更新</button>
+    <button type="submit" style="font-size: 1.2em;">項目内容を更新</button>
     <button type="button" style="font-size: 1.2em;" onclick="resetVotes()">投票リセット</button>
   </form>
   <hr>
