--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta description="オンラインで投票が可能なサービスです．ネット環境とデバイスさえあれば使用可能なお手軽ソフトです．主に授業の理解度確認などの教育関係を目的としています。">
+  <link rel="manifest" href="/manifest.json">
   <title>オンライン投票サービス(Top)</title>
   <style>
     body { font-family: sans-serif; }
