--- a/master.html
+++ b/master.html
@@ -8,6 +8,7 @@
   <script src="vote.js"></script>
   <!-- QRコード生成ライブラリ -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+  <link rel="manifest" href="/manifest.json">
   <style>
     body { font-family: sans-serif; }
     input[type="text"] { width: 200px; }
