--- a/slave.html
+++ b/slave.html
@@ -6,6 +6,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="vote.js"></script>
+  <link rel="manifest" href="/manifest.json">
   <style>
     body { font-family: sans-serif; }
     .vote-btn { margin: 4px 0; font-size: 1.5em; }
