--- a/master.html
+++ b/master.html
@@ -9,6 +9,9 @@
   <!-- QRコード生成ライブラリ -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/x-icon" href="/images/logo.PNG">
+  <link rel="apple-touch-icon" href="/images/logo.PNG" sizes="180x180">
+
   <style>
     body { font-family: sans-serif; }
     input[type="text"] { width: 200px; }
