--- a/slave.html
+++ b/slave.html
@@ -7,6 +7,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="vote.js"></script>
   <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/x-icon" href="/images/logo.PNG">
+  <link rel="apple-touch-icon" href="/images/logo.PNG" sizes="180x180">
+
   <style>
     body { font-family: sans-serif; }
     .vote-btn { margin: 4px 0; font-size: 1.5em; }
