--- a/slave.html
+++ b/slave.html
@@ -7,6 +7,10 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="vote.js"></script>
   <link rel="manifest" href="/manifest.json">
+  
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180">
+  <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192">
 
   <style>
     body { font-family: sans-serif; }
