--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta description="オンラインで投票が可能なサービスです．ネット環境とデバイスさえあれば使用可能なお手軽ソフトです．主に授業の理解度確認などの教育関係を目的としています。">
   <link rel="manifest" href="/manifest.json">
 
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" sizes="180x180">
+  <link rel="icon" type="image/png" href="images/android-chrome-192x192.png" sizes="192x192">
 
   <title>オンライン投票サービス(Top)</title>
   <style>
