--- a/master.html
+++ b/master.html
@@ -10,9 +10,9 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <link rel="manifest" href="/manifest.json">
 
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" sizes="180x180">
+  <link rel="icon" type="image/png" href="images/android-chrome-192x192.png" sizes="192x192">
 
   <style>
     body { font-family: sans-serif; }
