--- a/master.html
+++ b/master.html
@@ -18,6 +18,31 @@
   <style>
     body { font-family: sans-serif; }
     input[type="text"] { width: 200px; }
+    #offline-notice {
+      display: flex;
+      align-items: center;
+      position: fixed;
+      right: 24px;
+      bottom: 24px;
+      min-width: 220px;
+      background: #f44336;
+      color: #fff;
+      padding: 16px 24px;
+      border-radius: 8px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+      font-weight: bold;
+      opacity: 0;
+      transform: translateY(40px) scale(0.95);
+      pointer-events: none;
+      transition: opacity 0.4s cubic-bezier(.4,0,.2,1), 
+                  transform 0.4s cubic-bezier(.4,0,.2,1);
+      z-index: 9999;
+    }
+    #offline-notice.show {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+      pointer-events: auto;
+    }
   </style>
 </head>
 <body>
@@ -69,6 +94,27 @@
         height: 180
       });
     }
+
+    // service workerの登録関係
+    if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service_worker.js').then(function(registration) {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }).catch(function(err) {
+        console.log('ServiceWorker registration failed: ', err);
+    });
+    }
+
+    function updateOnlineStatus() {
+      const notice = document.getElementById('offline-notice');
+      if (navigator.onLine) {
+        notice.classList.remove('show');
+      } else {
+        notice.classList.add('show');
+      }
+    }
+    window.addEventListener('online', updateOnlineStatus);
+    window.addEventListener('offline', updateOnlineStatus);
+    updateOnlineStatus();
   </script>
 </body>
 </html>
