--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 </head>
 <body>
   <h2>オンライン投票サービス</h2>
+  <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
+  
   <p>
     オンラインで投票をするサービスです．<br>
     投票開催者の方は以下のボタンをクリックして新しい投票を開始してください．
