--- a/slave.html
+++ b/slave.html
@@ -44,6 +44,8 @@
   </style>
 </head>
 <body>
+  <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
+
   <h2>投票画面</h2>
   <div>投票ID: <span id="voteId"></span></div>
   <div id="choices"></div>
