--- a/master.html
+++ b/master.html
@@ -58,7 +58,7 @@
   <hr>
   <details>
     <summary>参加者向けQRコードを表示</summary>
-    <div id="qrcode"></div>
+    <div id="qrcode" align="center" style="margin: 1em; border: 1px;"></div>
   </details>
   <hr>
   <form id="labelForm">
