--- a/slave.html
+++ b/slave.html
@@ -47,7 +47,7 @@
   <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
 
   <h2>投票画面</h2>
-  <div>投票ID: <span id="voteId"></span></div>
+  <div>投票ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
   <div id="choices"></div>
   <hr>
   <div id="results"></div>
