--- a/master.html
+++ b/master.html
@@ -49,7 +49,7 @@
   <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
 
   <h2>投票確認画面</h2>
-  <div>投票ID: <span id="voteId"></span></div>
+  <div>投票ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
   <div>
     参加者用URL: 
     <input type="text" id="slaveUrl" readonly style="width:350px">
