Add information for index.html

--- a/index.html
+++ b/index.html
@@ -41,15 +41,25 @@
   </style>
 </head>
 <body>
-  <h2>オンライン投票サービス</h2>
+  <h1>オンライン投票サービス</h1>
   <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
   
   <p>
-    オンラインで投票をするサービスです．<br>
-    投票開催者の方は以下のボタンをクリックして新しい投票を開始してください．
+    オンライン投票サービスへようこそ．<br>
+    本サービスはインターネット接続環境さえあれば，アカウントなしで投票をすることが可能です．<br>
+    投票の進行状況はリアルタイムで反映されます．<br><br>
+
+    主に学校教育を目的とした簡易投票サービスであり，できる限り機能は省いていますので，投票数が重要な用途など，本サービスが不向きな場合も多いことをお知りおきください．
+  </p>
+  <hr>
+  <h2>投票開催者</h2>
+  <p>
+    投票開催者の方は以下のボタンをクリックして新しい投票を開始してください．<br>
+    なお，管理画面リンクをメモしておくことを推奨します．
   </p>
   <button onclick="newSession()">新しい投票を開始(マスター画面)</button>
   <hr>
+  <h2>投票参加者</h2>
   <p>参加者の方は，開催者から共有された投票IDをテキスト入力欄に入力して投票に参加してください.</p>
   <form onsubmit="join(event)">
     <label>参加する投票ID: <input type="text" id="joinId" required></label>
