--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h2>投票参加者</h3>
   <p>参加者の方は，開催者から共有された投票IDをテキスト入力欄に入力して投票に参加してください.</p>
   <form onsubmit="join(event)">
-    <label>参加する投票ID: <input type="text" id="joinId" height="32px" required></label>
+    <label>参加する投票ID: <input type="text" id="joinId" style="height: 32px;" required></label>
     <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">参加(スレーブ画面)</button>
   </form>
   <script>
