--- a/master.html
+++ b/master.html
@@ -52,13 +52,13 @@
   <div>投票ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
   <div>
     参加者用URL: 
-    <input type="text" id="slaveUrl" readonly style="width:350px">
+    <input type="text" id="slaveUrl" style="height: 28px;" readonly style="width:200px">
     <button type="button" onclick="copySlaveUrl()">コピー</button>
   </div>
   <hr>
   <details>
     <summary>参加者向けQRコードを表示</summary>
-    <div id="qrcode" align="center" style="margin: 1em; border: 1px;"></div>
+    <div id="qrcode" align="center" style="margin: 1em; border: 1px; border-color: #000;"></div>
   </details>
   <hr>
   <form id="labelForm">
