--- a/slave.html
+++ b/slave.html
@@ -15,7 +15,17 @@
 
   <style>
     body { font-family: sans-serif; }
-    .vote-btn { margin: 4px 0; font-size: 1.5em; }
+    .vote-btn {
+      margin: 4px 0;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      padding: 6px 16px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.2s;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
     #offline-notice {
       display: flex;
       align-items: center;
