--- a/slave.html
+++ b/slave.html
@@ -30,10 +30,10 @@
       background: #f20;
     }
     #vote-area button:nth-of-type(2) {
-      background: #f70;
+      background: #f80;
     }
     #vote-area button:nth-of-type(3) {
-      background: #43a047;  /* 緑 */
+      background: #43a047;
     }
     #vote-area button:nth-of-type(4) {
       background: #07f;
