--- a/slave.html
+++ b/slave.html
@@ -26,16 +26,16 @@
       transition: background 0.2s;
       box-shadow: 0 2px 6px rgba(0,0,0,0.08);
     }
-    #vote-area button:nth-of-type(1) {
+    #choices button:nth-of-type(1) {
       background: #f20;
     }
-    #vote-area button:nth-of-type(2) {
+    #choices button:nth-of-type(2) {
       background: #f80;
     }
-    #vote-area button:nth-of-type(3) {
+    #choices button:nth-of-type(3) {
       background: #43a047;
     }
-    #vote-area button:nth-of-type(4) {
+    #choices button:nth-of-type(4) {
       background: #07f;
     }
     #offline-notice {
