--- a/master.html
+++ b/master.html
@@ -17,7 +17,7 @@
 
   <style>
     body { font-family: sans-serif; }
-    input[type="text"] { width: 200px; }
+    input[type="text"] { width: 200px; height: 28px;}
     #offline-notice {
       display: flex;
       align-items: center;
@@ -62,7 +62,7 @@
   </details>
   <hr>
   <form id="labelForm">
-    <div id="labels" style="height: 28px;"></div>
+    <div id="labels"></div>
     <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1.2rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">項目内容を更新</button>
     <button type="button" style="background-color: #f50; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1.2rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" onclick="resetVotes()">投票リセット</button>
   </form>
