--- a/master.html
+++ b/master.html
@@ -17,7 +17,7 @@
 
   <style>
     body { font-family: sans-serif; }
-    input[type="text"] { width: 200px; height: 28px;}
+    input[type="text"] { width: 300px; height: 28px; margin: 1px; font-size: 1.75em}
     #offline-notice {
       display: flex;
       align-items: center;
