--- a/slave.html
+++ b/slave.html
@@ -17,6 +17,7 @@
     body { font-family: sans-serif; }
     .vote-btn {
       margin: 4px 0;
+      text-decoration: bold, underline;
       color: #fff;
       border: none;
       border-radius: 10px;
