--- a/master.html
+++ b/master.html
@@ -49,11 +49,11 @@
   <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
 
   <h2>投票確認画面</h2>
-  <div>投票ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
+  <div>投票ID: <span id="voteId" style="font-family: Courier; font-size: 1.25em; text-decoration: underline;"></span></div>
   <div>
     参加者用URL: 
     <input type="text" id="slaveUrl" style="height: 20px; font-size: 1em;" readonly style="width:200px">
-    <button type="button" style="background-color: #eee; color: #000; border-style: solid; border-color: #888; border-width: 1px; border-radius: 10px; padding: 6px 16px; font-size: 1.5em; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" onclick="copySlaveUrl()">コピー</button>
+    <button type="button" style="background-color: #eee; color: #000; border-style: solid; border-color: #888; border-width: 1px; border-radius: 10px; padding: 4px 16px; font-size: 1em; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" onclick="copySlaveUrl()">コピー</button>
   </div>
   <hr>
   <details>
