--- a/slave.html
+++ b/slave.html
@@ -28,16 +28,16 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.08);
     }
     #choices button:nth-of-type(1) {
-      background: #f20;
+      background: #ffccdc;
     }
     #choices button:nth-of-type(2) {
-      background: #f80;
+      background: #fff7a8;
     }
     #choices button:nth-of-type(3) {
-      background: #43a047;
+      background: #caefd1;
     }
     #choices button:nth-of-type(4) {
-      background: #07f;
+      background: #b3ddfc;
     }
     #offline-notice {
       display: flex;
