--- a/slave.html
+++ b/slave.html
@@ -18,7 +18,7 @@
     .vote-btn {
       margin: 4px 0;
       text-decoration: bold, underline;
-      color: #fff;
+      color: #000;
       border: none;
       border-radius: 10px;
       padding: 6px 16px;
