--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta description="オンラインで投票が可能なサービスです．ネット環境とデバイスさえあれば使用可能なお手軽ソフトです．主に授業の理解度確認などの教育関係を目的としています。">
+
+  <meta property="og:title" content="オンライン投票サービス">
+  <meta property="og:description" content="オンラインで投票が可能なサービスです．ネット環境とデバイスさえあれば使用可能なお手軽ソフトです．">
+  <meta property="og:image" content="images/ogp-icon-1200x630.png">
+  <meta property="og:url" content="https://hobbuy-blog.github.io/voting">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="オンライン投票サービス">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="images/ogp-icon-1200x630.png">
+  
   <link rel="manifest" href="/manifest.json">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
