--- a/slave.html
+++ b/slave.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="オンライン投票サービス">
+  <meta property="og:description" content="オンラインで投票が可能なサービスです．ネット環境とデバイスさえあれば使用可能なお手軽ソフトです．">
+  <meta property="og:image" content="images/ogp-icon-1200x630.png">
+  <meta property="og:url" content="https://hobbuy-blog.github.io/voting">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="オンライン投票サービス">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="images/ogp-icon-1200x630.png">
+  
   <title>オンライン投票サービス(Slave)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
