--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     なお，管理画面リンクをメモしておくことを推奨します．
   </p>
   <button onclick="newSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
+  <form>
+    <label>投票ID: <input type="text" id="joinId" style="height: 28px;" required></label>
+    <button onclick="customSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">投票IDを指定して投票を開始(マスター画面)</button>
+  </form>
   <hr>
   <h3>投票参加者</h3>
   <p>参加者の方は，開催者から共有された投票IDをテキスト入力欄に入力して投票に参加してください.</p>
@@ -79,6 +83,9 @@
     function newSession() {
       // ランダムID生成
       const id = Math.random().toString(36).slice(2,8);
+      location.href = `master.html?id=${id}`;
+    }
+    function customSession() {
       location.href = `master.html?id=${id}`;
     }
     function join(e) {
