--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
     投票開催者の方は以下のボタンをクリックして新しい投票を開始してください．<br>
     なお，管理画面リンクをメモしておくことを推奨します．
   </p>
-  <button onclick="newSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
   <form>
-    <label>投票ID: <input type="text" id="joinId" style="height: 28px;" required></label>
-    <button onclick="customSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">投票IDを指定して投票を開始(マスター画面)</button>
+    <label>自動生成投票IDで開始: <button onclick="newSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button></label>
+  </form>
+  <form style="margin-top: 4px;">
+    <label>カスタム投票IDで開始: <input type="text" id="joinId" style="height: 28px;" required></label>
+    <button onclick="customSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
   </form>
   <hr>
   <h3>投票参加者</h3>
