--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </form>
   <form style="margin-top: 4px;">
     <label>カスタム投票IDで開始: <input type="text" id="customId" style="height: 28px;" required></label>
-    <button onclick="customSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
+    <button type="submit" onclick="customSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
   </form>
   <hr>
   <h3>投票参加者</h3>
