--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <form>
     <label>自動生成投票IDで開始: <button onclick="newSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button></label>
   </form>
-  <form onsubmit="join(event)">
+  <form onsubmit="enter(event)" style="margin-top: 4px;">
     <label>カスタム投票IDで開始: <input type="text" id="joinId" style="height: 28px;" required></label>
-    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">参加(スレーブ画面)</button>
+    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
   </form>
   <hr>
   <h3>投票参加者</h3>
@@ -86,6 +86,11 @@
       // ランダムID生成
       const id = Math.random().toString(36).slice(2,8);
       location.href = `master.html?id=${id}`;
+    }
+    function enter(e) {
+      e.preventDefault();
+      const id = document.getElementById('joinId').value.trim();
+      if(id) location.href = `master.html?id=${encodeURIComponent(id)}`;
     }
     function join(e) {
       e.preventDefault();
