--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     なお，管理画面リンクをメモしておくことを推奨します．
   </p>
   <form>
-    <label>自動生成投票IDで開始: <button onclick="newSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button></label>
+    <label>自動生成投票IDで開始: <button onclick="newSession()" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08); text-decoration: bold;">新しい投票を開始(マスター画面)</button></label>
   </form>
   <form onsubmit="enter(event)" style="margin-top: 4px;">
     <label>カスタム投票IDで開始: <input type="text" id="joinId" style="height: 28px;" required></label>
