--- a/top-hiragana.html
+++ b/top-hiragana.html
@@ -51,24 +51,24 @@
   </style>
 </head>
 <body>
-  <h2>オンライン<rubby>投票<rt>とうひょう</rt></ruby>サービス</h2>
-  <div id="offline-notice">インターネットに<rubby>繋<rt>つな</rt></ruby>がっていません．<br>インターネット環境をお確かめください．</div>
+  <h2>オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービス</h2>
+  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br>インターネットを<ruby>確<rt>たし</rt></ruby>かめください．</div>
   
   <p>
-    オンライン<rubby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
-    このサイトでは<rubby>投票<rt>とうひょう</rt></ruby>をすることができます．<br>
-    <rubby>先生<rt>せんせい</rt></ruby>の<rubby>言<rt>い</rt></ruby>ったとおりに<rubby>使<rt>つか</rt></ruby>ってください．<br><br>
+    オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
+    このサイトでは<ruby>投票<rt>とうひょう</rt></ruby>をすることができます．<br>
+    <ruby>先生<rt>せんせい</rt></ruby>の<ruby>言<rt>い</rt></ruby>ったとおりに<ruby>使<rt>つか</rt></ruby>ってください．<br><br>
 
-    このサイトは，<rubby>小学校<rt>しょうがっこう</rt></ruby><rubby>低学年<rt>ていがくねん</rt></ruby>の<rubby>人<rt>ひと</rt></ruby>にあわせて<rubby>作<rt>つく</rt></ruby>られています．
+    このサイトは，<ruby>小学校<rt>しょうがっこう</rt></ruby><ruby>低学年<rt>ていがくねん</rt></ruby>の<ruby>人<rt>ひと</rt></ruby>にあわせて<ruby>作<rt>つく</rt></ruby>られています．
   </p>
   <hr>
-  <h3><rubby>投票<rt>とうひょう</rt></ruby>に<rubby>参加<rt>さんか</rt></ruby>する</h3>
+  <h3><ruby>投票<rt>とうひょう</rt></ruby>に<ruby>参加<rt>さんか</rt></ruby>する</h3>
   <p>
-    <rubby>投票<rt>とうひょう</rt></ruby>をする<rubby>人<rt>ひと</rt></ruby>は，<rubby>下<rt>した</rt></ruby>の<rubby>欄<rt>らん</rt></ruby>に<rubby>先生<rt>せんせい</rt></ruby>から<rubby>言<rt>い</rt></ruby>われた<b><rubby>投票<rt>とうひょう</rt></ruby>ID</b>を<rubby>入<rt>い</rt></ruby>れてください．<br>
-    そのあとで，<b><rubby>参加<rt>さんか</rt></ruby>する</b>を<rubby>押<rt>お</rt></ruby>してください．</p>
+    <ruby>投票<rt>とうひょう</rt></ruby>をする<ruby>人<rt>ひと</rt></ruby>は，<ruby>下<rt>した</rt></ruby>の<ruby>欄<rt>らん</rt></ruby>に<ruby>先生<rt>せんせい</rt></ruby>から<ruby>言<rt>い</rt></ruby>われた<b><ruby>投票<rt>とうひょう</rt></ruby>ID</b>を<ruby>入<rt>い</rt></ruby>れてください．<br>
+    そのあとで，<b><ruby>参加<rt>さんか</rt></ruby>する</b>を<ruby>押<rt>お</rt></ruby>してください．</p>
   <form onsubmit="join(event)">
-    <label><rubby>投票<rt>とうひょう</rt></ruby>ID: <input type="text" id="joinId" style="height: 28px;" required></label>
-    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);"><rubby>参加<rt>さんか</rt></ruby>する</button>
+    <label><ruby>投票<rt>とうひょう</rt></ruby>ID: <input type="text" id="joinId" style="height: 28px;" required></label>
+    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);"><ruby>参加<rt>さんか</rt></ruby>する</button>
   </form>
   <script>
     function join(e) {
