--- a/en/top.html
+++ b/en/top.html
@@ -95,7 +95,7 @@
     function join(e) {
       e.preventDefault();
       const id = document.getElementById('joinId').value.trim();
-      if(id) location.href = `slave.html?id=${encodeURIComponent(id)}`;
+      if(id) location.href = `join.html?id=${encodeURIComponent(id)}`;
     }
 
     // service workerの登録関係
