--- a/en/master.html
+++ b/en/master.html
@@ -16,7 +16,7 @@
   <title>オンライン投票サービス(Master)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-  <script src="vote.js"></script>
+  <script src="./vote.js"></script>
   <!-- QRコード生成ライブラリ -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <link rel="manifest" href="./../manifest.json">
