--- a/en/top.html
+++ b/en/top.html
@@ -72,14 +72,14 @@
   </form>
   <form onsubmit="enter(event)" style="margin-top: 4px;">
     <label>Start from your custom ID: <input type="text" id="joinId" style="height: 28px;" required></label>
-    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">Create a Vote (Master)</button>
+    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08); font-weight: bold;">Create a Vote (Master)</button>
   </form>
   <hr>
   <h3>Join a Vote</h3>
   <p>Enter the voting ID which provided from host into textbox, then click "Join a Vote".</p>
   <form onsubmit="join(event)">
     <label>Voting ID: <input type="text" id="joinId" style="height: 28px;" required></label>
-    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">Join a Vote</button>
+    <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08); font-weight: bold;">Join a Vote</button>
   </form>
   <script>
     function newSession() {
