--- a/en/join.html
+++ b/en/join.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="オンライン投票サービス">
-  <meta property="og:description" content="オンラインで投票が可能なサービスです．ネット環境とデバイスさえあれば使用可能なお手軽ソフトです．">
-  <meta property="og:image" content="images/ogp-icon-1200x630.png">
+  <meta property="og:title" content="Online Voting Service">
+  <meta property="og:description" content="The service is what can vote online. Very easy to use, you need to prepare the Internet and devices.">
+  <meta property="og:image" content="./../images/ogp-icon-1200x630.png">
   <meta property="og:url" content="https://hobbuy-blog.github.io/voting">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="オンライン投票サービス">
+  <meta property="og:site_name" content="Online Voting Service">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="images/ogp-icon-1200x630.png">
-  
+  <meta name="twitter:image" content="./../images/ogp-icon-1200x630.png">
+
   <title>オンライン投票サービス(Slave)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="./vote.js"></script>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="./../manifest.json">
   
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" sizes="180x180">
-  <link rel="icon" type="image/png" href="images/android-chrome-192x192.png" sizes="192x192">
+  <link rel="shortcut icon" href="./../images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="./../images/apple-touch-icon-180x180.png" sizes="180x180">
+  <link rel="icon" type="image/png" href="./../images/android-chrome-192x192.png" sizes="192x192">
 
   <style>
     body { font-family: sans-serif; }
@@ -77,10 +77,10 @@
   </style>
 </head>
 <body>
-  <div id="offline-notice">インターネットに接続されていません．<br>インターネット環境をお確かめください．</div>
+  <div id="offline-notice">The Internet connection has lost.<br>Please check your Internet.</div>
 
-  <h2>投票画面</h2>
-  <div>投票ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
+  <h2>Voting Page</h2>
+  <div>Voting ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
   <div id="choices"></div>
   <hr>
   <div id="results"></div>
@@ -93,7 +93,7 @@
 
     // service workerの登録関係
     if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service_worker.js').then(function(registration) {
+    navigator.serviceWorker.register('./../service_worker.js').then(function(registration) {
         console.log('ServiceWorker registration successful with scope: ', registration.scope);
     }).catch(function(err) {
         console.log('ServiceWorker registration failed: ', err);
