Prepare for Ver4

--- a/en/master.html
+++ b/en/master.html
@@ -63,7 +63,7 @@
   <div>
     Joining URL: 
     <input type="text" id="slaveUrl" style="height: 20px; font-size: 1em;" readonly style="width:200px">
-    <button type="button" style="background-color: #eee; color: #000; border-style: solid; border-color: #888; border-width: 1px; border-radius: 10px; padding: 4px 16px; font-size: 1em; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" onclick="copySlaveUrl()">コピー</button>
+    <button type="button" style="background-color: #eee; color: #000; border-style: solid; border-color: #888; border-width: 1px; border-radius: 10px; padding: 4px 16px; font-size: 1em; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" onclick="copySlaveUrl()">Copy</button>
   </div>
   <hr>
   <details>
