--- a/en/top.html
+++ b/en/top.html
@@ -129,8 +129,8 @@
       pointer-events: none;
     }
     .footer-tab {
-      width: 180px;
-      margin: 0.5em;
+      width: 240px;
+      margin: 0 auto;
       background: #444;
       color: #fff;
       text-align: center;
