--- a/language/footer.html
+++ b/language/footer.html
@@ -8,7 +8,8 @@
     }
     .footer-tab {
       width: 240px;
-      margin: 0 auto;
+      margin-left: 0;
+      margin-right: 0 auto;
       background: #444;
       color: #fff;
       text-align: center;
