--- a/language/footer.html
+++ b/language/footer.html
@@ -35,7 +35,7 @@
       left: 0;
       bottom: 0;
       transform: translateY(100%);
-      transition: transform 0.4s cubic-bezier(.4,2,.6,1), box-shadow 0.2s;
+      transition: transform 0.4s ease-in-out, box-shadow 0.2s;
       box-shadow: 0 -8px 24px rgba(0,0,0,0.2);
       will-change: transform;
       pointer-events: auto;
@@ -49,7 +49,7 @@
     }
     .button-link {
     display: inline-block;
-    padding: 10px 22px;
+    padding: 10px 4px;
     border-radius: 6px;
     background: #1976d2;
     color: #fff;
