--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -30,6 +30,7 @@
       right: 24px;
       bottom: 24px;
       min-width: 220px;
+      min-height: 64px;
       background: #f44336;
       color: #fff;
       padding: 16px 24px;
