--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -49,6 +49,17 @@
       transform: translateY(0) scale(1);
       pointer-events: auto;
     }
+    .network-error-message ruby {
+      font-size: 1em;
+      line-height: 1;
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .network-error-message rt {
+      font-size: 0.6em;
+      line-height: 1;
+      letter-spacing: 0;
+    }
   </style>
 </head>
 <body>
