--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -49,13 +49,13 @@
       transform: translateY(0) scale(1);
       pointer-events: auto;
     }
-    .network-error-message ruby {
+    .offline-notice ruby {
       font-size: 1em;
       line-height: 1;
       display: inline-block;
       vertical-align: middle;
     }
-    .network-error-message rt {
+    .offline-notice rt {
       font-size: 0.6em;
       line-height: 1;
       letter-spacing: 0;
@@ -64,7 +64,7 @@
 </head>
 <body>
   <h2>オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービス</h2>
-  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br>インターネットを<ruby>確<rt>たし</rt></ruby>かめください．</div>
+  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br>インターネットを<ruby>確<rt>たし</rt></ruby>かめてください．</div>
   
   <p>
     オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
