--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -49,13 +49,13 @@
       transform: translateY(0) scale(1);
       pointer-events: auto;
     }
-    .offline-notice ruby {
+    #offline-notice ruby {
       font-size: 1em;
       line-height: 1;
       display: inline-block;
       vertical-align: middle;
     }
-    .offline-notice rt {
+    #offline-notice rt {
       font-size: 0.6em;
       line-height: 1;
       letter-spacing: 0;
