--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <h2>オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービス</h2>
-  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br>インターネットを<ruby>確<rt>たし</rt></ruby>かめてください．</div>
+  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br><br>インターネットを<ruby>確<rt>たし</rt></ruby>かめてください．</div>
   
   <p>
     オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
