--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -52,7 +52,7 @@
     #offline-notice ruby {
       font-size: 1em;
       line-height: 1.2;
-      vertical-align: middle;
+      vertical-align: text-bottom;
     }
     #offline-notice rt {
       font-size: 0.5em;
