--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -49,21 +49,11 @@
       transform: translateY(0) scale(1);
       pointer-events: auto;
     }
-    #offline-notice ruby {
-      font-size: 1em;
-      line-height: 1.2;
-      vertical-align: text-bottom;
-    }
-    #offline-notice rt {
-      font-size: 0.5em;
-      line-height: 1;
-      letter-spacing: 0;
-    }
   </style>
 </head>
 <body>
   <h2>オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービス</h2>
-  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br><br>インターネットを<ruby>確<rt>たし</rt></ruby>かめてください．</div>
+  <div id="offline-notice"><ruby>インターネットに<rt></rt></ruby><ruby>繋<rt>つな</rt></ruby><ruby>がっていません．<rt></rt></ruby><br><ruby>インターネットを<rt></rt></ruby><ruby>確<rt>たし</rt></ruby><ruby>かめてください．<rt></rt></ruby></div>
   
   <p>
     オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
