--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -30,7 +30,6 @@
       right: 24px;
       bottom: 24px;
       min-width: 220px;
-      min-height: 64px;
       background: #f44336;
       color: #fff;
       padding: 16px 24px;
@@ -53,8 +52,9 @@
 </head>
 <body>
   <h2>オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービス</h2>
-  <div id="offline-notice"><ruby>インターネットに<rt>　</rt></ruby><ruby>繋<rt>つな</rt></ruby><ruby>がっていません．<rt>　</rt></ruby><br><ruby>インターネットを<rt>　</rt></ruby><ruby>確<rt>たし</rt></ruby><ruby>かめてください．<rt>　</rt></ruby></div>
-  
+  <div id="offline-notice">
+    <p><ruby>インターネットに<rt>　</rt></ruby><ruby>繋<rt>つな</rt></ruby><ruby>がっていません．<rt>　</rt></ruby></p>
+    <p><ruby>インターネットを<rt>　</rt></ruby><ruby>確<rt>たし</rt></ruby><ruby>かめてください．<rt>　</rt></ruby></div></p>
   <p>
     オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
     このサイトでは<ruby>投票<rt>とうひょう</rt></ruby>をすることができます．<br>
