--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -54,7 +54,8 @@
   <h2>オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービス</h2>
   <div id="offline-notice">
     <p><ruby>インターネットに<rt>　</rt></ruby><ruby>繋<rt>つな</rt></ruby><ruby>がっていません．<rt>　</rt></ruby></p>
-    <p><ruby>インターネットを<rt>　</rt></ruby><ruby>確<rt>たし</rt></ruby><ruby>かめてください．<rt>　</rt></ruby></div></p>
+    <p><ruby>インターネットを<rt>　</rt></ruby><ruby>確<rt>たし</rt></ruby><ruby>かめてください．<rt>　</rt></ruby></p>
+  </div>
   <p>
     オンライン<ruby>投票<rt>とうひょう</rt></ruby>サービスへようこそ．<br>
     このサイトでは<ruby>投票<rt>とうひょう</rt></ruby>をすることができます．<br>
