--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -25,6 +25,7 @@
     body { font-family: sans-serif; }
     #offline-notice {
       display: flex;
+      flex-direction: column;
       align-items: center;
       position: fixed;
       right: 24px;
