--- a/hiragana/slave-hiragana.html
+++ b/hiragana/slave-hiragana.html
@@ -77,7 +77,12 @@
   </style>
 </head>
 <body>
-  <div id="offline-notice">インターネットに<ruby>繋<rt>つな</rt></ruby>がっていません．<br>インターネットを<ruby>確<rt>たし</rt></ruby>かめください．</div>
+  <div id="offline-notice">
+    <p>
+      <ruby>インターネットに<rt>　</rt></ruby><ruby>繋<rt>つな</rt></ruby><ruby>がっていません．<rt>　</rt></ruby><br>
+      <ruby>インターネットを<rt>　</rt></ruby><ruby>確<rt>たし</rt></ruby><ruby>かめてください．<rt>　</rt></ruby>
+    </p>
+  </div>
 
   <h2><ruby>投票<rt>とうひょう</rt></ruby>サイト</h2>
   <div><ruby>投票<rt>とうひょう</rt></ruby>ID: <span id="voteId" style="font-family: Courier; text-decoration: underline;"></span></div>
