--- a/slave.html
+++ b/slave.html
@@ -16,7 +16,7 @@
   <title>オンライン投票サービス(Slave)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-  <script src="vote-hiragana.js"></script>
+  <script src="vote.js"></script>
   <link rel="manifest" href="/manifest.json">
   
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
